--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -205,13 +205,17 @@ footer {
 }
 .box-2 .card {
   width: 300px;
-  /* height: 550px; */
+  height: 600px;
   padding: 15px;
   border-radius: 8px;
   align-items: flex-start;
   background-color: var(--themeColor3);
   cursor: pointer;
+  overflow-y: scroll;
   transition: all 0.3s ease;
+}
+::-webkit-scrollbar {
+  width: 5px;
 }
 
 .box-2 .card:hover {
