--- a/views/layouts/main-1.handlebars
+++ b/views/layouts/main-1.handlebars
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thy Will</title>
+    <title>Thy Will - Your Popular Will Drafting Tool</title>
     <link rel="shortcut icon" type="image/x-icon" href="https://img.icons8.com/cotton/64/000000/sign-document.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
